# automotive_vehicles_engine_health_analysis

./: Makefile  README.md  environment.yml  pyproject.toml
automotive_vehicles_engine_health_analysis/: __init__.py  dataset.py  features.py  plots.py
automotive_vehicles_engine_health_analysis/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
