[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "automotive_vehicles_engine_health_analysis"
version = "0.0.1"
description = "See https://www.kaggle.com/datasets/parvmodi/automotive-vehicles-engine-health-dataset for more information"
authors = [
  { name = "Xochitl Cedillo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["automotive_vehicles_engine_health_analysis"]
force_sort_within_sections = true
